[ci skip] Various tweaks 29c58a08ef2f7452ecb8d7dbc123e65cccea134e

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a4159f1",
+   "id": "1d9461e3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e497cc4e",
+   "id": "01a04e17",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40efcf51",
+   "id": "38364e8a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2ea5253",
+   "id": "88250750",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c677fcf9",
+   "id": "04886cb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3999076b",
+   "id": "4f3d0823",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea7130b7",
+   "id": "5033c16c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9425a231",
+   "id": "d235ad80",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2235407a",
+   "id": "e018a654",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c18589f",
+   "id": "1f8580f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f07219fe",
+   "id": "9d518b83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b95958",
+   "id": "86983093",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9073aeba",
+   "id": "657a793a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a492f84",
+   "id": "8980dd0a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a48de1",
+   "id": "0962824f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,10 +272,11 @@
     "fr_time = pl.col(\"time\").dt.convert_time_zone(\"Europe/Paris\")\n",
     "calendar = time.with_columns(\n",
     "    [\n",
-    "        fr_time.dt.date().is_in(holidays_fr.keys()).alias(\"cal_is_holiday\"),\n",
+    "        fr_time.dt.hour().alias(\"cal_hour_of_day\"),\n",
     "        fr_time.dt.weekday().alias(\"cal_day_of_week\"),\n",
     "        fr_time.dt.ordinal_day().alias(\"cal_day_of_year\"),\n",
-    "        fr_time.dt.hour().alias(\"cal_hour_of_day\"),\n",
+    "        fr_time.dt.year().alias(\"cal_year\"),\n",
+    "        fr_time.dt.date().is_in(holidays_fr.keys()).alias(\"cal_is_holiday\"),\n",
     "    ],\n",
     ")\n",
     "calendar"
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cfda962",
+   "id": "88ea12f8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -298,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a370b15a",
+   "id": "b1c75a2b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -315,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e11e1953",
+   "id": "297ca663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c09fe874",
+   "id": "62011918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df66b31f",
+   "id": "36f2282a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02483a88",
+   "id": "7b07e21f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8249857",
+   "id": "09cc844e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504a323e",
+   "id": "c6573416",
    "metadata": {},
    "source": [
     "\n",
@@ -414,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16ec36c9",
+   "id": "071c2938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd12d9d9",
+   "id": "4a2005ee",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -443,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ba26a0d",
+   "id": "8e103e03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138ddb92",
+   "id": "de2a9072",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ebcb7c",
+   "id": "8b3d908b",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -513,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab0dd5c",
+   "id": "7d8e7577",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1958586b",
+   "id": "a4e132e9",
    "metadata": {},
    "source": [
     "\n",
@@ -535,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f18301a5",
+   "id": "22374ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "295defa7",
+   "id": "46b309a9",
    "metadata": {},
    "source": [
     "\n",
@@ -558,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9803cc14",
+   "id": "c476a33d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c2bab5",
+   "id": "795f94eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6673aa",
+   "id": "b9f3be48",
    "metadata": {},
    "source": [
     "\n",
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8f2b182",
+   "id": "6573ffe5",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -639,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68db9065",
+   "id": "96bec64f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a2fae0d",
+   "id": "da1f2ed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4854bf43",
+   "id": "bb19242a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183b1d05",
+   "id": "db8c6c25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74be1f59",
+   "id": "df6d4d3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +748,9 @@
     "\n",
     "load_selector = s.glob(\"load_*\")\n",
     "cal_selector = s.glob(\"cal_*\")\n",
+    "holiday_selector = s.glob(\"cal_is_holiday\")\n",
     "weather_selector = s.glob(\"weather_*\")\n",
+    "temperature_selector = s.glob(\"weather_temperature_*\")\n",
     "moisture_selector = s.glob(\"weather_moisture_*\")\n",
     "cloud_cover_selector = s.glob(\"weather_cloud_cover_*\")\n",
     "rolling_load_selector = s.glob(\"load_mw_rolling_*\")\n",
@@ -759,11 +762,13 @@
     "            {\n",
     "                \"none\": nothing_selector,\n",
     "                \"load\": load_selector,\n",
+    "                \"rolling_load\": rolling_load_selector,\n",
     "                \"weather\": weather_selector,\n",
-    "                \"calendar\": cal_selector,\n",
+    "                \"temperature\": temperature_selector,\n",
     "                \"moisture\": moisture_selector,\n",
     "                \"cloud_cover\": cloud_cover_selector,\n",
-    "                \"rolling_load\": rolling_load_selector,\n",
+    "                \"calendar\": cal_selector,\n",
+    "                \"holiday\": holiday_selector,\n",
     "            },\n",
     "            name=\"dropped_features\",\n",
     "        )\n",
@@ -786,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "635da913",
+   "id": "b26bf30a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -814,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59bed407",
+   "id": "9f9fce81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e33e5261",
+   "id": "c9e78ea9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "570e3e0e",
+   "id": "05f35bf3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -891,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07c9b8cd",
+   "id": "6b7648ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c925a8a",
+   "id": "9d7bcc86",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -913,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f752bc5d",
+   "id": "d91333cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6682b959",
+   "id": "a29ebe2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff6982fc",
+   "id": "3490ec74",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -966,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31faf17a",
+   "id": "414a20ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a94d723",
+   "id": "a85e4f59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33165482",
+   "id": "c4fbcf59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e20a7536",
+   "id": "2e1f1464",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caeb498e",
+   "id": "dfb702ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b21ce42",
+   "id": "bd398080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b49167e0",
+   "id": "eb21a9f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7812a5dd",
+   "id": "d1b8e27f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b548015",
+   "id": "ed7acc39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e15870a",
+   "id": "b0e3f93b",
    "metadata": {},
    "outputs": [],
    "source": []
