--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "201650cb",
+   "id": "fd51b49e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6702cd65",
+   "id": "aa53e567",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "017a85c9",
+   "id": "2a75eced",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81cb170b",
+   "id": "fb9f98c6",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca9e37e2",
+   "id": "ae4f7c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "797759eb",
+   "id": "3b268db4",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce4d9af2",
+   "id": "62b3f869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae15cb1",
+   "id": "ae621ca5",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3cb38f1",
+   "id": "4936ff8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db712f2d",
+   "id": "bfeba0c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6442a0d",
+   "id": "a8bbabf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b28a257",
+   "id": "06ea581b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b501158c",
+   "id": "290ae2ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c65a18",
+   "id": "c5e73d16",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5407ad4e",
+   "id": "3121712b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,10 +272,11 @@
     "fr_time = pl.col(\"time\").dt.convert_time_zone(\"Europe/Paris\")\n",
     "calendar = time.with_columns(\n",
     "    [\n",
-    "        fr_time.dt.date().is_in(holidays_fr.keys()).alias(\"cal_is_holiday\"),\n",
+    "        fr_time.dt.hour().alias(\"cal_hour_of_day\"),\n",
     "        fr_time.dt.weekday().alias(\"cal_day_of_week\"),\n",
     "        fr_time.dt.ordinal_day().alias(\"cal_day_of_year\"),\n",
-    "        fr_time.dt.hour().alias(\"cal_hour_of_day\"),\n",
+    "        fr_time.dt.year().alias(\"cal_year\"),\n",
+    "        fr_time.dt.date().is_in(holidays_fr.keys()).alias(\"cal_is_holiday\"),\n",
     "    ],\n",
     ")\n",
     "calendar"
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48046b79",
+   "id": "adf8960b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -298,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7d6db56",
+   "id": "a4c67c80",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -315,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e684bb86",
+   "id": "cd8ef771",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe271ad",
+   "id": "8dcc12f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e31d4616",
+   "id": "dc41ac1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bca07234",
+   "id": "5d400a5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c657e2",
+   "id": "363c5188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9145d33f",
+   "id": "5ab42f63",
    "metadata": {},
    "source": [
     "\n",
@@ -414,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "454046e3",
+   "id": "47c6870b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d1dd65a",
+   "id": "eeff97e3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -443,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4520aa0",
+   "id": "12801568",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc7f446f",
+   "id": "6a7d5460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad2fc38",
+   "id": "c4f6a08b",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -513,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50965c50",
+   "id": "fc4210bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "581ff524",
+   "id": "41f2f552",
    "metadata": {},
    "source": [
     "\n",
@@ -535,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "682a8f33",
+   "id": "51e862d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8060e8a",
+   "id": "7da36d63",
    "metadata": {},
    "source": [
     "\n",
@@ -558,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b50dfe5",
+   "id": "59ba24fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4ec4359",
+   "id": "0f28e7da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69dff443",
+   "id": "f2189088",
    "metadata": {},
    "source": [
     "\n",
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa3629cb",
+   "id": "529140e6",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -639,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "405ff79b",
+   "id": "f7d9c16f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2938ac7f",
+   "id": "a62fbd70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "005a9601",
+   "id": "2e14f157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "746cd203",
+   "id": "d22751ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f608ffa",
+   "id": "faa3ca2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +748,9 @@
     "\n",
     "load_selector = s.glob(\"load_*\")\n",
     "cal_selector = s.glob(\"cal_*\")\n",
+    "holiday_selector = s.glob(\"cal_is_holiday\")\n",
     "weather_selector = s.glob(\"weather_*\")\n",
+    "temperature_selector = s.glob(\"weather_temperature_*\")\n",
     "moisture_selector = s.glob(\"weather_moisture_*\")\n",
     "cloud_cover_selector = s.glob(\"weather_cloud_cover_*\")\n",
     "rolling_load_selector = s.glob(\"load_mw_rolling_*\")\n",
@@ -759,11 +762,13 @@
     "            {\n",
     "                \"none\": nothing_selector,\n",
     "                \"load\": load_selector,\n",
+    "                \"rolling_load\": rolling_load_selector,\n",
     "                \"weather\": weather_selector,\n",
-    "                \"calendar\": cal_selector,\n",
+    "                \"temperature\": temperature_selector,\n",
     "                \"moisture\": moisture_selector,\n",
     "                \"cloud_cover\": cloud_cover_selector,\n",
-    "                \"rolling_load\": rolling_load_selector,\n",
+    "                \"calendar\": cal_selector,\n",
+    "                \"holiday\": holiday_selector,\n",
     "            },\n",
     "            name=\"dropped_features\",\n",
     "        )\n",
@@ -786,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bef7d391",
+   "id": "a52148af",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -814,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f5341d",
+   "id": "38f1e293",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b79e9d6",
+   "id": "80386982",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a048817",
+   "id": "4029efe4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -891,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94884b7c",
+   "id": "d3292109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bd98a4e",
+   "id": "e5157705",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -913,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6444b665",
+   "id": "e4c60e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "925c0dff",
+   "id": "da7b66f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adc5be19",
+   "id": "8a95db05",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -966,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a080815",
+   "id": "cf901c60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3edf01c5",
+   "id": "e414c043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbcc806d",
+   "id": "249e6adc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdce98a4",
+   "id": "fffa1f98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73435aa7",
+   "id": "e3859af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2351806",
+   "id": "cb3b4c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b305a269",
+   "id": "c981b237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b0b2579",
+   "id": "b7134dff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30c867e0",
+   "id": "6f5e8c2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa0b7a07",
+   "id": "6ce7a167",
    "metadata": {},
    "outputs": [],
    "source": []
