[ci skip] Various tweaks d1dc0326dd637ce27cae745a8f9365eaecd89822

--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd51b49e",
+   "id": "4872c815",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa53e567",
+   "id": "b4e52ae1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a75eced",
+   "id": "faf0b550",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb9f98c6",
+   "id": "ad442f40",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae4f7c0c",
+   "id": "3ee9a7a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b268db4",
+   "id": "ffa1ac66",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62b3f869",
+   "id": "2525d53b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae621ca5",
+   "id": "5de29c9b",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4936ff8c",
+   "id": "13174d97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfeba0c9",
+   "id": "1954856f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8bbabf9",
+   "id": "f1d2139f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ea581b",
+   "id": "736fd1ab",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "290ae2ac",
+   "id": "ab913990",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e73d16",
+   "id": "402a16cf",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3121712b",
+   "id": "84274247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf8960b",
+   "id": "c7a93e0a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4c67c80",
+   "id": "7b8bda24",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd8ef771",
+   "id": "039b64e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dcc12f2",
+   "id": "c4424b84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc41ac1b",
+   "id": "7277ab56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d400a5c",
+   "id": "0a35404e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363c5188",
+   "id": "7a270a84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab42f63",
+   "id": "f4e6a125",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47c6870b",
+   "id": "5c1e51b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeff97e3",
+   "id": "8b7c19e2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12801568",
+   "id": "1f3fc103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a7d5460",
+   "id": "b325c338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f6a08b",
+   "id": "c0eb844c",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc4210bc",
+   "id": "8271420c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f2f552",
+   "id": "34c60e7b",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51e862d3",
+   "id": "8b2bb379",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7da36d63",
+   "id": "7510d2b4",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59ba24fd",
+   "id": "2e2bc0f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f28e7da",
+   "id": "ddc6e713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2189088",
+   "id": "0996dfae",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529140e6",
+   "id": "b523d2b4",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7d9c16f",
+   "id": "79d318ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62fbd70",
+   "id": "d4b09b4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,8 +678,7 @@
     "        )\n",
     "        .join(\n",
     "            all_city_weather.with_columns(\n",
-    "                cs.starts_with(\"weather_\")\n",
-    "                .shift(-horizon_of_interest)\n",
+    "                cs.starts_with(\"weather_\").shift(-horizon_of_interest)\n",
     "                # .name.suffix(f\"_future_{horizon_of_interest}h\")\n",
     "            ),\n",
     "            left_on=\"prediction_time\",\n",
@@ -687,8 +686,7 @@
     "        )\n",
     "        .join(\n",
     "            calendar.with_columns(\n",
-    "                cs.starts_with(\"weather_\")\n",
-    "                .shift(-horizon_of_interest)\n",
+    "                cs.starts_with(\"weather_\").shift(-horizon_of_interest)\n",
     "                # .name.suffix(f\"_future_{horizon_of_interest}h\")\n",
     "            ),\n",
     "            left_on=\"prediction_time\",\n",
@@ -704,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e14f157",
+   "id": "0bfa8fda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d22751ca",
+   "id": "fec46614",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faa3ca2d",
+   "id": "02186c54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a52148af",
+   "id": "ca87ba7d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -819,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f1e293",
+   "id": "8feaa0be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80386982",
+   "id": "b8c473bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4029efe4",
+   "id": "bc45d39b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -896,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3292109",
+   "id": "fb2a8eb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,19 +904,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5157705",
+   "id": "9c489f3c",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "randomized_search.plot_results()"
+    "randomized_search.plot_results().update_layout(margin=dict(l=150))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4c60e4e",
+   "id": "65c9d934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da7b66f1",
+   "id": "64357af0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a95db05",
+   "id": "5227fe18",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -971,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf901c60",
+   "id": "3b8fb549",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e414c043",
+   "id": "4336f216",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "249e6adc",
+   "id": "820b722d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fffa1f98",
+   "id": "9124a72a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3859af7",
+   "id": "a9d55631",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb3b4c62",
+   "id": "bbc85acd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c981b237",
+   "id": "b48ebb19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7134dff",
+   "id": "89ef093d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,15 +1096,19 @@
     "\n",
     "\n",
     "def plot_horizon(output, prediction_time, past_true_values=5):\n",
-    "    # Find the row that contains the forecasted values\n",
-    "    row = output.filter(pl.col(\"prediction_time\") == prediction_time).rows()[0]\n",
+    "    # TODO: display 2 segments for the true load values: past and future.\n",
+    "    # TODO: use a dict with naming instead of a positional tuple for the\n",
+    "    # forecast record. Find the row that contains the forecasted values\n",
+    "    predict_record = output.filter(pl.col(\"prediction_time\") == prediction_time).rows()[\n",
+    "        0\n",
+    "    ]\n",
     "    # Build the forecast dataframe by concatenating the different horizons\n",
     "    forecast = pl.DataFrame(\n",
     "        {\n",
-    "            \"forecast_time\": row[0] + datetime.timedelta(hours=h),\n",
+    "            \"forecast_time\": predict_record[0] + datetime.timedelta(hours=h),\n",
     "            \"forecast_value\": predicted_value,\n",
     "        }\n",
-    "        for h, predicted_value in enumerate(row[2:], start=1)\n",
+    "        for h, predicted_value in enumerate(predict_record[2:], start=1)\n",
     "    )\n",
     "    # Get the past true values and also the future true values of to the last horizon\n",
     "    true_values = output.filter(\n",
@@ -1116,7 +1118,7 @@
     "        )\n",
     "        & (\n",
     "            pl.col(\"prediction_time\")\n",
-    "            <= prediction_time + datetime.timedelta(hours=len(row) - 2)\n",
+    "            <= prediction_time + datetime.timedelta(hours=len(predict_record) - 2)\n",
     "        )\n",
     "    )\n",
     "    # plot the true and forecasted values\n",
@@ -1138,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f5e8c2f",
+   "id": "10227da5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1151,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce7a167",
+   "id": "309453b0",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "time_to_plot = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "plot_horizon(output, time_to_plot, past_true_values=24 * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d645e298",
    "metadata": {},
    "outputs": [],
    "source": []
