--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1d9461e3",
+   "id": "7b9a10bf",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a04e17",
+   "id": "68105474",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38364e8a",
+   "id": "40183cd4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88250750",
+   "id": "aeab11b1",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04886cb0",
+   "id": "e0c011f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f3d0823",
+   "id": "368ea90d",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5033c16c",
+   "id": "34006748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d235ad80",
+   "id": "114f3b35",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e018a654",
+   "id": "ab851a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f8580f7",
+   "id": "a4cfa30d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d518b83",
+   "id": "54ec3793",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86983093",
+   "id": "a69d8aca",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "657a793a",
+   "id": "9e0c7a76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8980dd0a",
+   "id": "17b79f7e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0962824f",
+   "id": "419a1b19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88ea12f8",
+   "id": "9827c348",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c75a2b",
+   "id": "b15dddbd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "297ca663",
+   "id": "26e06b41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62011918",
+   "id": "7d115a7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36f2282a",
+   "id": "419f7e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b07e21f",
+   "id": "f7926fde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09cc844e",
+   "id": "6a2ef6a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6573416",
+   "id": "2fbc60b7",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "071c2938",
+   "id": "2b24b681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a2005ee",
+   "id": "f58415ce",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e103e03",
+   "id": "f78c3d19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de2a9072",
+   "id": "a40a51ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b3d908b",
+   "id": "83862fe2",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d8e7577",
+   "id": "11a1eb1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e132e9",
+   "id": "26a30913",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22374ed5",
+   "id": "7032807a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46b309a9",
+   "id": "874ce626",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c476a33d",
+   "id": "196570b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "795f94eb",
+   "id": "c567437a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f3be48",
+   "id": "6fb95b14",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6573ffe5",
+   "id": "052689e5",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96bec64f",
+   "id": "2dbff465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da1f2ed0",
+   "id": "d6f6ec41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,8 +678,7 @@
     "        )\n",
     "        .join(\n",
     "            all_city_weather.with_columns(\n",
-    "                cs.starts_with(\"weather_\")\n",
-    "                .shift(-horizon_of_interest)\n",
+    "                cs.starts_with(\"weather_\").shift(-horizon_of_interest)\n",
     "                # .name.suffix(f\"_future_{horizon_of_interest}h\")\n",
     "            ),\n",
     "            left_on=\"prediction_time\",\n",
@@ -687,8 +686,7 @@
     "        )\n",
     "        .join(\n",
     "            calendar.with_columns(\n",
-    "                cs.starts_with(\"weather_\")\n",
-    "                .shift(-horizon_of_interest)\n",
+    "                cs.starts_with(\"weather_\").shift(-horizon_of_interest)\n",
     "                # .name.suffix(f\"_future_{horizon_of_interest}h\")\n",
     "            ),\n",
     "            left_on=\"prediction_time\",\n",
@@ -704,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb19242a",
+   "id": "5109771b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db8c6c25",
+   "id": "693efe93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df6d4d3c",
+   "id": "8ab0af47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26bf30a",
+   "id": "df295de7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -819,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f9fce81",
+   "id": "bef8ab56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9e78ea9",
+   "id": "f45b220f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05f35bf3",
+   "id": "73b483eb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -896,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b7648ca",
+   "id": "6b4cf995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,19 +904,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d7bcc86",
+   "id": "e1f31d30",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "randomized_search.plot_results()"
+    "randomized_search.plot_results().update_layout(margin=dict(l=150))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d91333cc",
+   "id": "7f2d75b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a29ebe2b",
+   "id": "275bc089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3490ec74",
+   "id": "1ebc4957",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -971,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "414a20ce",
+   "id": "b6900e93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85e4f59",
+   "id": "141cbb75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4fbcf59",
+   "id": "f08f4f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1f1464",
+   "id": "1636e99a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfb702ec",
+   "id": "fb5e9acd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd398080",
+   "id": "c86894ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb21a9f8",
+   "id": "8fa21474",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b8e27f",
+   "id": "c756f6ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,15 +1096,19 @@
     "\n",
     "\n",
     "def plot_horizon(output, prediction_time, past_true_values=5):\n",
-    "    # Find the row that contains the forecasted values\n",
-    "    row = output.filter(pl.col(\"prediction_time\") == prediction_time).rows()[0]\n",
+    "    # TODO: display 2 segments for the true load values: past and future.\n",
+    "    # TODO: use a dict with naming instead of a positional tuple for the\n",
+    "    # forecast record. Find the row that contains the forecasted values\n",
+    "    predict_record = output.filter(pl.col(\"prediction_time\") == prediction_time).rows()[\n",
+    "        0\n",
+    "    ]\n",
     "    # Build the forecast dataframe by concatenating the different horizons\n",
     "    forecast = pl.DataFrame(\n",
     "        {\n",
-    "            \"forecast_time\": row[0] + datetime.timedelta(hours=h),\n",
+    "            \"forecast_time\": predict_record[0] + datetime.timedelta(hours=h),\n",
     "            \"forecast_value\": predicted_value,\n",
     "        }\n",
-    "        for h, predicted_value in enumerate(row[2:], start=1)\n",
+    "        for h, predicted_value in enumerate(predict_record[2:], start=1)\n",
     "    )\n",
     "    # Get the past true values and also the future true values of to the last horizon\n",
     "    true_values = output.filter(\n",
@@ -1116,7 +1118,7 @@
     "        )\n",
     "        & (\n",
     "            pl.col(\"prediction_time\")\n",
-    "            <= prediction_time + datetime.timedelta(hours=len(row) - 2)\n",
+    "            <= prediction_time + datetime.timedelta(hours=len(predict_record) - 2)\n",
     "        )\n",
     "    )\n",
     "    # plot the true and forecasted values\n",
@@ -1138,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed7acc39",
+   "id": "facec750",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1151,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e3f93b",
+   "id": "5e8d7691",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "time_to_plot = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "plot_horizon(output, time_to_plot, past_true_values=24 * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "595f023d",
    "metadata": {},
    "outputs": [],
    "source": []
