--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f61788e4",
+   "id": "19f576dd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe404d2",
+   "id": "b8910107",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9595df25",
+   "id": "bef0de08",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "233db1c0",
+   "id": "b6ef39a4",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff98eb9b",
+   "id": "251edff4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde4d1e8",
+   "id": "ca8365de",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0fce16f",
+   "id": "0c9fe388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebff23fa",
+   "id": "0fbc67ed",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0d869a",
+   "id": "1f104a7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eceadabc",
+   "id": "69e20f9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea2b9620",
+   "id": "b0c0ff33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0166a99c",
+   "id": "efa15bed",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74262327",
+   "id": "7b63718a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fefcb8d9",
+   "id": "ba032f07",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85478a23",
+   "id": "2cf2cafc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d2abd0",
+   "id": "532a4f30",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207cb2be",
+   "id": "207693c4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eabce68",
+   "id": "e94cd52f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea5f18b3",
+   "id": "2060484f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab4ab096",
+   "id": "9ba98254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ad9a362",
+   "id": "b845e6e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a70ac88",
+   "id": "db36a7ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f82e2f5",
+   "id": "8de3d58f",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fdc24d5",
+   "id": "7ddd2fb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "381d2462",
+   "id": "ee926a42",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d760f68a",
+   "id": "e1048c42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9580149",
+   "id": "85e421bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e5c058",
+   "id": "5b788cbf",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0064384f",
+   "id": "93a6ca37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df477316",
+   "id": "e8234a51",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f47c791",
+   "id": "16e86158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b746e651",
+   "id": "5f4cbabd",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0509a9cb",
+   "id": "7cb0b310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826c8f31",
+   "id": "f39f9c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400aa59c",
+   "id": "0598cd18",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5e0e1b",
+   "id": "221158d7",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5240db9c",
+   "id": "3a23fbee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b03aec52",
+   "id": "10bbf970",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b541546b",
+   "id": "132a2107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66c4a152",
+   "id": "74df9159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1278aeb6",
+   "id": "7683f1d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf1d872",
+   "id": "129d285d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9b8d7d7",
+   "id": "7548c846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "033ac3ef",
+   "id": "de3a7551",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16620c45",
+   "id": "b3847765",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cca5f06",
+   "id": "f8672e3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e42ec80",
+   "id": "1fc747cf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "599799be",
+   "id": "7abf93b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c071ef23",
+   "id": "42ad11fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20494494",
+   "id": "2aecbc26",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa8f8f6e",
+   "id": "9a050ca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e035c0",
+   "id": "53916c1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "144df94b",
+   "id": "d0346ea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
     "    }\n",
     "\n",
     "\n",
-    "predictions.skb.cross_validate(\n",
+    "cv_results = predictions.skb.cross_validate(\n",
     "    cv=ts_cv_5,\n",
     "    scoring=scoring,\n",
     "    return_train_score=True,\n",
@@ -1036,7 +1036,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea896218",
+   "id": "111801c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98b6afb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9921f317",
+   "id": "bffe93df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9c15bf0",
+   "id": "44f5ef48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df3219d0",
+   "id": "e3a8280e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fef621b",
+   "id": "40b12402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e1bc2cb",
+   "id": "b456a71e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9defb0b",
+   "id": "41ac22df",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1164,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc42a749",
+   "id": "9a1b2b76",
    "metadata": {},
    "outputs": [],
    "source": []
