--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f2aff281",
+   "id": "b28fe3e1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e62c439",
+   "id": "7941f920",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c8a11a9",
+   "id": "5c46b8a0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821324f4",
+   "id": "5f236a47",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5faa320",
+   "id": "57844191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8cc1c73",
+   "id": "20ef02ed",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4881ae99",
+   "id": "2ca2dec4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d344ee59",
+   "id": "90e2718a",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55b587c",
+   "id": "142142fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "364c0810",
+   "id": "090cf9f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "340bdf83",
+   "id": "f0c18bda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54ae01d7",
+   "id": "4a9a2190",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8c97df3",
+   "id": "b4476697",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff73d9c",
+   "id": "a86f1f5e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07998e9c",
+   "id": "d46ac8f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57ec4d1a",
+   "id": "ed11da54",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89fd35d3",
+   "id": "87e19ee0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33fb066b",
+   "id": "081ec0ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eec22408",
+   "id": "f60f8060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f2e2bf6",
+   "id": "bd6f2354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0f93aae",
+   "id": "a6b30543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3353ed53",
+   "id": "ccb5f91c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea906e8",
+   "id": "97675524",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb085371",
+   "id": "30802739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67dd6ad",
+   "id": "fd84f123",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31c202a8",
+   "id": "7969d60e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "903f2a1f",
+   "id": "5766f14a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b73f06",
+   "id": "f197f149",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c59a1e2",
+   "id": "952d7596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b685215e",
+   "id": "6dad1686",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "748ecf44",
+   "id": "3fb9035c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c844b52",
+   "id": "9c6f8731",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5520bfef",
+   "id": "6b91733f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76fa716e",
+   "id": "f2536f0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98e9324e",
+   "id": "7d1e4d91",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c331ec4",
+   "id": "3e63d01a",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d47cfb3",
+   "id": "4bcfed8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ad438ae",
+   "id": "de04b8c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f2e53a5",
+   "id": "ec5245ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b4810c",
+   "id": "ccb4a97e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7f3c353",
+   "id": "014067a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb387e2",
+   "id": "d199a36e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c10a866d",
+   "id": "b8041b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd567db",
+   "id": "ab7d48ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "915ff94c",
+   "id": "e15469da",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03880a59",
+   "id": "2c1d95de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30462f9d",
+   "id": "55d9aeb5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b595a115",
+   "id": "a8341e95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55c0ae32",
+   "id": "f2715931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fe5ce47",
+   "id": "aae72b11",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a4c6ce4",
+   "id": "27e6e296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a12c8e3",
+   "id": "0b0ca134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9b36ba",
+   "id": "9b32dc37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
     "    }\n",
     "\n",
     "\n",
-    "predictions.skb.cross_validate(\n",
+    "cv_results = predictions.skb.cross_validate(\n",
     "    cv=ts_cv_5,\n",
     "    scoring=scoring,\n",
     "    return_train_score=True,\n",
@@ -1036,7 +1036,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59144370",
+   "id": "d021cfb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0220dfbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c8e3838",
+   "id": "f32b9fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b51aed",
+   "id": "e400654e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb567470",
+   "id": "c9fa17c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8905e29",
+   "id": "c7eba554",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32ef0d5",
+   "id": "af2bdfbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a826db97",
+   "id": "e080cfaf",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1164,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "364d9cb7",
+   "id": "af59324e",
    "metadata": {},
    "outputs": [],
    "source": []
